@@ -5,6 +5,9 @@ Unreleased
   since the unittest compat enhancements allow
   trial to handle it on its own
 
+- don't hide an ImportError when importing a plugin produces one.
+  fixes issue375.
+
 - fix issue380 by making --resultlog only rely on longrepr instead
   of the "reprcrash" attribute which only exists sometimes.
 
